# MigrationHint

./: .gitignore  .gitmodules  1  CMakeLists.txt  README.md  clean.sh  run.sh
ai-backend/: ai-backend.py  post-process.py  run.sh
include/: ca_ASTHelpers.hpp  ca_Abilities.hpp  ca_PreprocessorHelpers.hpp  ca_utils.hpp  utils.hpp
src/: CMakeLists.txt  CodeAnalyser.cpp  CodeAnalysis.cpp  Indexer.cpp  ca_ASTHelpers.cpp  ca_Abilities.cpp  ca_ExDepJSONBackend.cpp  ca_MigrateCodeGenerator.cpp  ca_PreprocessorHelpers.cpp  ca_ZengHelpers.cpp  ca_utils.cpp  utils.cpp
src/CodeGen/: CMakeLists.txt
src/CodeGen/src/: cg_main.cpp
src/FlexiParse/: CMakeLists.txt
src/FlexiParse/include/: headerGen.hpp  jsonAbility.hpp  markdownGen.hpp  parser.hpp
src/FlexiParse/src/: fp_main.cpp  headerGen.cpp  jsonAbility.cpp  markdownGen.cpp  parser.cpp
test/simple_test_case1/: sylib.h  test1.c
tools/: build_linux_kernel_from_source.sh  build_llvm_from_source.sh
